--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "axios": "^0.24.0",
+    "express": "^4.17.2",
+    "vue": "^2.6.14",
+    "vue-resource": "^1.5.3"
   }
 }
